fix: actualizar ProductoService para usar BigDecimal