@@ -1,116 +1,108 @@
 package com.josethjax.kinalapp.Service;
 
-import com.josethjax.kinalapp.Service.IProductoService;
 import com.josethjax.kinalapp.entity.Producto;
 import com.josethjax.kinalapp.repository.ProductoRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class ProductoService implements IProductoService {
 
-    @Autowired
-    private ProductoRepository productoRepository;
+    private final ProductoRepository productoRepository;
+
+    public ProductoService(ProductoRepository productoRepository) {
+        this.productoRepository = productoRepository;
+    }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Producto> listarProductos() {
         return productoRepository.findAll();
     }
 
     @Override
-    public Optional<Producto> buscarPorCodigo(Integer codigo) {
-        return productoRepository.findById(codigo);
+    @Transactional(readOnly = true)
+    public Optional<Producto> buscarPorCodigo(Integer codigoProducto) {
+        return productoRepository.findById(codigoProducto);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Producto> listarPorEstado(int estado) {
-        return productoRepository.findAll().stream()
+        return listarProductos().stream()
                 .filter(p -> p.getEstado() == estado)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Producto> listarConStock() {
-        return productoRepository.findAll().stream()
-                .filter(p -> p.getStock() != null && p.getStock() > 0 && p.getEstado() == 1)
-                .collect(Collectors.toList());
+        return listarProductos().stream()
+                .filter(p -> p.getStock() != null && p.getStock() > 0)
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Producto> listarSinStock() {
-        return productoRepository.findAll().stream()
-                .filter(p -> p.getStock() != null && p.getStock() == 0 && p.getEstado() == 1)
-                .collect(Collectors.toList());
+        return listarProductos().stream()
+                .filter(p -> p.getStock() != null && p.getStock() == 0)
+                .toList();
     }
 
     @Override
     public Producto guardar(Producto producto) {
-        // Validaciones
-        if (producto.getNombreProducto() == null || producto.getNombreProducto().trim().isEmpty()) {
-            throw new IllegalArgumentException("El nombre del producto es obligatorio");
-        }
+        validarProducto(producto);
 
-        if (producto.getPrecio() == null || producto.getPrecio() <= 0) {
-            throw new IllegalArgumentException("El precio debe ser mayor a 0");
-        }
-
-        if (producto.getStock() == null) {
-            producto.setStock(0);
-        }
-
-        if (producto.getEstado() == null) {
-            producto.setEstado(1); // Activo por defecto
-        }
-
-        // Validar que no exista otro producto con el mismo nombre
-        boolean nombreExiste = productoRepository.findAll().stream()
-                .anyMatch(p -> p.getNombreProducto().equalsIgnoreCase(producto.getNombreProducto())
-                        && !p.getCodigoProducto().equals(producto.getCodigoProducto()));
-
-        if (nombreExiste) {
-            throw new IllegalArgumentException("Ya existe un producto con ese nombre");
+        if (producto.getEstado() == null || producto.getEstado() == 0) {
+            producto.setEstado(1);
         }
 
         return productoRepository.save(producto);
     }
 
     @Override
-    public void eliminar(Integer codigo) {
-        productoRepository.deleteById(codigo);
-    }
-
-    @Override
-    public boolean existePorCodigo(Integer codigo) {
-        return productoRepository.existsById(codigo);
-    }
-
-    @Override
-    public Producto actualizar(Integer codigo, Producto producto) {
-        Producto productoExistente = productoRepository.findById(codigo)
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
-
-        productoExistente.setNombreProducto(producto.getNombreProducto());
-        productoExistente.setPrecio(producto.getPrecio());
-        productoExistente.setStock(producto.getStock());
-        productoExistente.setEstado(producto.getEstado());
-
-        return guardar(productoExistente);
-    }
-
-    @Override
-    public void actualizarStock(Integer codigo, int cantidad) {
-        Producto producto = productoRepository.findById(codigo)
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
-
-        int nuevoStock = producto.getStock() - cantidad;
-        if (nuevoStock < 0) {
-            throw new IllegalArgumentException("Stock insuficiente. Stock actual: " + producto.getStock());
+    public Producto actualizar(Integer codigoProducto, Producto producto) {
+        if (!productoRepository.existsById(codigoProducto)) {
+            throw new RuntimeException("El producto no se encontró con el código: " + codigoProducto);
         }
 
-        producto.setStock(nuevoStock);
-        productoRepository.save(producto);
+        producto.setCodigoProducto(codigoProducto);
+        validarProducto(producto);
+
+        return productoRepository.save(producto);
+    }
+
+    @Override
+    public void eliminar(Integer codigoProducto) {
+        if (!productoRepository.existsById(codigoProducto)) {
+            throw new RuntimeException("El producto no se encontró con el código: " + codigoProducto);
+        }
+        productoRepository.deleteById(codigoProducto);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public boolean existePorCodigo(Integer codigoProducto) {
+        return productoRepository.existsById(codigoProducto);
+    }
+
+    private void validarProducto(Producto producto) {
+        if (producto.getNombreProducto() == null || producto.getNombreProducto().trim().isEmpty()) {
+            throw new IllegalArgumentException("El nombre del producto es obligatorio");
+        }
+
+        if (producto.getPrecio() == null || producto.getPrecio().compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("El precio debe ser mayor a 0");
+        }
+
+        if (producto.getStock() == null || producto.getStock() < 0) {
+            throw new IllegalArgumentException("El stock no puede ser negativo");
+        }
     }
 }
